# rust-data-pipeline

./: .env  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yaml
migrations/: init.sql
src/: auth.rs  config.rs  error.rs  main.rs  rate_limit.rs
src/db/: mod.rs  queries.rs
src/ingest/: csv_ingestor.rs  image_ingestor.rs  json_ingestor.rs  mod.rs
src/routes/: assets.rs  mod.rs  upload.rs
