[package]
name = "rust-data-pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.52", features = ["full"] }
axum = { version = "0.8", features = ["multipart"] }
tower-http = { version = "0.7", features = ["limit", "trace", "cors"] }
sqlx = { version = "0.9", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "migrate", "chrono", "json", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
csv = "1.4"
infer = "0.16"
uuid = { version = "1.23", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
kamadak-exif = "0.6"
anyhow = "1"
